clarify which 0613 is which

--- a/laureates_paper_new.tex
+++ b/laureates_paper_new.tex
@@ -408,7 +408,8 @@ frequency being examined.
 as well as single-pulsar limits from J0437-0745 and B1937+21. Also plotted is
 the high frequency limits obtained in this analysis from J0613--0200,
     J0645+5158, and
-J2302+4442, and the previously published limit from J1713+0747.}
+J2302+4442, and the previously published limit from J1713+0747. Here, the data
+    from the Beklen campaign was used for J0613}
     \includegraphics[width=1\textwidth]{./figures/all_limits_incfall.png}
     \includegraphics[width=1\textwidth]{./figures/hf_limits.png}
 \end{figure}
@@ -474,7 +475,7 @@ an order of magnitude below the corresponding directional limit.
 
 \begin{figure}
     \caption{Directional limits established in the direction of J2302 and J0645.
-    Also plotted is the J0613 directional limit, which was significantly higher
+    Also plotted is the J0613 directional limit from the Beklen campaign, which was significantly higher
     than expected.}
     \includegraphics[width=1\textwidth]{./figures/all_directional.png}
 \end{figure}
