formatting so margins dont overflow

--- a/laureates_paper_new.tex
+++ b/laureates_paper_new.tex
@@ -6,6 +6,7 @@
   \usepackage[usenames,dvipsnames]{color}
 \usepackage{sidecap}
 \usepackage{listings}
+\usepackage{natbib}
 
 %%%%%%%%%%%%%%%
 % User defined macros
@@ -23,6 +24,15 @@
 %\newcommand{\refr}{\color{red}}
 \newcommand{\refb}{}
 %\newcommand{\refb}{\color{blue}}
+
+
+\tolerance 1414
+\hbadness 1414
+\emergencystretch 1.5em
+\hfuzz 0.3pt
+\widowpenalty=10000
+\vfuzz \hfuzz
+\raggedbottom
 
 
 %\newenvironment{inlinefigure}{
