new data for 2302 directional added

--- a/laureates_paper_new.tex
+++ b/laureates_paper_new.tex
@@ -45,6 +45,7 @@
 
 \title{Detecting High-Frequency Gravitational Waves With the Pulsar Timing Array}
 \author{Daniel Halmrast \\ Advisor: Timothy Dolch}
+\date{}
 
 \maketitle
 
@@ -485,7 +486,7 @@ an order of magnitude below the corresponding directional limit.
     \caption{Directional limits established in the direction of J2302 and J0645.
     Also plotted is the J0613 directional limit from the Beklen campaign, which was significantly higher
     than expected.}
-    \includegraphics[width=1\textwidth]{./figures/all_directional.png}
+    \includegraphics[width=1\textwidth]{./figures/all_directional_July_limits.png}
 \end{figure}
 
 \section{Conclusion}
