small changes and new reference

--- a/laureates_paper_new.tex
+++ b/laureates_paper_new.tex
@@ -64,7 +64,7 @@ the data places new upper limits on GW strain in the high frequency regime.
 \section{Introduction}
 The search for low-frequency GWs in the universe is currently
 best carried out using Pulsar Timing Arrays (PTAs). The incredible precision timing of
-pulsars, along with their relative abundance in the universe, make the PTA a
+pulsars, along with their relative abundance in the universe, makes the PTA a
 high precision gravitational wave detection instrument with the ability to probe
 a large range of the gravitational wave parameter space.
 
@@ -77,7 +77,7 @@ The high fidelity of the PTA stems mainly from the fact that there is an
 abundance of pulsars in the galaxy with many different sky locations.
 Each line-of-sight to a pulsar provides data on the strength of
 GWs from any GW sources in the same direction as the pulsar. Furthermore, each pair of
-pulsars provides correlation data that can give additional information about Gws.
+pulsars provides correlation data that can give additional information about GWs.
 This is because each line-of-sight
 gives information analogous to the projection of the wave onto the line-of-sight. Thus, to ascertain a two-dimensional signal source position, at least two
 lines of sight are needed. Furthermore, with additional lines of sight,
@@ -287,7 +287,8 @@ The International Pulsar Timing Array (IPTA) is a consortium of collaborations
 from around the world, including NANOGrav in North America, the European Pulsar
 Timing Array (EPTA) in Europe, and the Parkes Pulsar Timing Array (PPTA) in
 Australia. The IPTA is tuned to probe GW frequencies in the months-to-years
-timescale. Observations of individual pulsars are carried out on a biweekly
+timescale, making it ideal for detecting sources such as supermassive black hole
+binary systems. Observations of individual pulsars are carried out on a biweekly
 basis, due to the large number of pulsars that need to be observed. With such
 infrequent observations, however, GW frequencies on the order of hours remain
 unexplored. This is due to the intrinsic limit on detection set by the Nyquist
@@ -296,6 +297,9 @@ for a given sampling frequency. In order to accurately sample a periodic signal,
 it is necessary to sample at least twice per cycle to avoid introducing errors.
 Beyond this frequency, the sampling rate is not enough to properly detect a sine
 wave signal, and any such CW signal would appear as white noise in the data.
+While large CW sources such as supermassive black hole binary systems do not
+typically emit CWs at such high frequencies, other exotic emission mechanisms
+(\cite{Chernoff}) have been proposed.
 
 Recently, a 24-hour global observation was carried out on J1713+0747, a particular pulsar, which
 resulted in a new set of limits on continuous wave (CW) strain in the days to
