new references on all-results plot

--- a/laureates_paper_new.tex
+++ b/laureates_paper_new.tex
@@ -417,8 +417,10 @@ frequency being examined.
 \section{Results}
 
 \begin{figure}
-    \caption{Recent single-source GW limits from the PPTA, EPTA, and NANOGrav,
-as well as single-pulsar limits from J0437-0745 and B1937+21. Also plotted is
+    \caption{Recent single-source GW limits from the PPTA\cite{Zhu2014},
+    EPTA\cite{Babak2016}, and NANOGrav\cite{Arz2014},
+    as well as single-pulsar limits from J0437-0745\cite{Yardley2010} and
+    B1937+21\cite{Yi2014}. Also plotted is
 the high frequency limits obtained in this analysis from J0613--0200,
     J0645+5158, and
 J2302+4442, and the previously published limit from J1713+0747. Here, the data
